--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -14,13 +14,13 @@
             <% socialClass = 'social-statis' %>
             <% if (theme.busuanziStatistics && theme.busuanziStatistics.totalTraffic) { %>
             <span id="busuanzi_container_site_pv">
-                |&nbsp;<i class="fa fa-heart-o"></i>总访问量:&nbsp;<span id="busuanzi_value_site_pv"
+                |&nbsp;<i class="fa fa-heart-o"></i>&nbsp;总访问量:&nbsp;<span id="busuanzi_value_site_pv"
                     class="white-color"></span>&nbsp;次
             </span>
             <% } %>
             <% if (theme.busuanziStatistics && theme.busuanziStatistics.totalNumberOfvisitors) { %>
             <span id="busuanzi_container_site_uv">
-                |&nbsp;<i class="fa fa-users"></i>总访问人数:&nbsp;<span id="busuanzi_value_site_uv"
+                |&nbsp;<i class="fa fa-users"></i>&nbsp;总访问人数:&nbsp;<span id="busuanzi_value_site_uv"
                     class="white-color"></span>&nbsp;人
             </span>
             <br>
