将访问量图标由”心“修改为”眼睛“，更符合”访问量“这个词

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -14,7 +14,7 @@
             <% socialClass = 'social-statis' %>
             <% if (theme.busuanziStatistics && theme.busuanziStatistics.totalTraffic) { %>
             <span id="busuanzi_container_site_pv">
-                |&nbsp;<i class="fa fa-heart-o"></i>&nbsp;总访问量:&nbsp;<span id="busuanzi_value_site_pv"
+                |&nbsp;<i class="fa fa-eye"></i>&nbsp;总访问量:&nbsp;<span id="busuanzi_value_site_pv"
                     class="white-color"></span>&nbsp;次
             </span>
             <% } %>
