--- a/layout/_partial/social-link.ejs
+++ b/layout/_partial/social-link.ejs
@@ -1,5 +1,5 @@
 <% if (theme.socialLink.github) { %>
-    <a href="theme.socialLink.github" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
         <i class="fa fa-github"></i>
     </a>
 <% } %>
@@ -11,13 +11,13 @@
 <% } %>
 
 <% if (theme.socialLink.facebook) { %>
-    <a href="theme.socialLink.facebook" data-tooltip="关注我的Facebook: <%= theme.socialLink.facebook %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.facebook %>" data-tooltip="关注我的Facebook: <%= theme.socialLink.facebook %>" data-position="top" data-delay="50">
         <i class="fa fa-facebook"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.twitter) { %>
-    <a href="theme.socialLink.twitter" class="tooltipped" data-tooltip="关注我的Twitter: <%= theme.socialLink.twitter %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.twitter %>" class="tooltipped" data-tooltip="关注我的Twitter: <%= theme.socialLink.twitter %>" data-position="top" data-delay="50">
         <i class="fa fa-twitter"></i>
     </a>
 <% } %>
@@ -29,13 +29,13 @@
 <% } %>
 
 <% if (theme.socialLink.weibo) { %>
-    <a href="theme.socialLink.weibo" data-tooltip="关注我的微博: <%= theme.socialLink.weibo %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.weibo %>" data-tooltip="关注我的微博: <%= theme.socialLink.weibo %>" data-position="top" data-delay="50">
         <i class="fa fa-weibo"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.zhihu) { %>
-    <a href="theme.socialLink.zhihu" data-tooltip="关注我的知乎: <%= theme.socialLink.zhihu %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.zhihu %>" data-tooltip="关注我的知乎: <%= theme.socialLink.zhihu %>" data-position="top" data-delay="50">
         <i class="fa fa-inverse">知</i>
     </a>
 <% } %>
