--- a/layout/_partial/social-link.ejs
+++ b/layout/_partial/social-link.ejs
@@ -5,7 +5,7 @@
 <% } %>
 
 <% if (theme.socialLink.email) { %>
-    <a href="<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
+    <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
         <i class="fa fa-envelope-open"></i>
     </a>
 <% } %>
