更新valine为最新版

--- a/layout/_partial/valine.ejs
+++ b/layout/_partial/valine.ejs
@@ -241,7 +241,7 @@
 </div>
 
 <script src="/libs/valine/av-min.js"></script>
-<script src="/libs/valine/Valine.min.js"></script>
+<script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 <script>
     new Valine({
         el: '#vcomments',
