修改 concact 页面中的一个小细节

--- a/layout/contact.ejs
+++ b/layout/contact.ejs
@@ -1,7 +1,7 @@
 <%- partial('_partial/bg-cover') %>
 
 <main class="content">
-    <div id="aboutme" class="container contact-container">
+    <div id="contact" class="container contact-container">
         <div class="card">
             <div class="card-content">
                 <div class="card-content article-card-content">
@@ -12,7 +12,6 @@
             </div>
         </div>
         <div class="card">
-
             <% if (theme.gitalk && theme.gitalk.enable) { %>
             <%- partial('_partial/gitalk') %>
             <% } %>
@@ -32,7 +31,6 @@
             <% if (theme.valine && theme.valine.enable) { %>
             <%- partial('_partial/valine') %>
             <% } %>
-
         </div>
     </div>
 </main>
