添加留言板card

--- a/layout/contact.ejs
+++ b/layout/contact.ejs
@@ -4,11 +4,10 @@
     <div id="aboutme" class="container contact-container">
         <div class="card">
             <div class="card-content">
-                <div class="card-content article-card-content">
-                    <div id="articleContent" data-aos="fade-up">
-                        <%- page.content %>
-                    </div>
+                <div class="tag-title center-align" style="font-size: 1.75rem;">
+                    <h1 style="margin: 2px 0 10px -4px;"><i class="fa comments"></i>&nbsp;&nbsp;留言板</h1>
                 </div>
+                <%- page.content %>
             </div>
         </div>
         <div class="card">
