--- a/layout/contact.ejs
+++ b/layout/contact.ejs
@@ -1,11 +1,11 @@
 <%- partial('_partial/bg-cover') %>
 
 <main class="content">
-    <div id="aboutme" class="container contact-container">
+    <div id="aboutme" class="container chip-container">
         <div class="card">
             <div class="card-content">
-                <div class="tag-title center-align" style="font-size: 1.75rem;">
-                    <h1 style="margin: 2px 0 10px -4px;"><i class="fa comments"></i>&nbsp;&nbsp;留言板</h1>
+                <div class="tag-title center-align">
+                    <i class="fa fa-comments"></i>&nbsp;&nbsp;<%= __('contact') %>
                 </div>
                 <%- page.content %>
             </div>
