--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -4,27 +4,64 @@
 
 <body>
 
-<%- partial('_partial/header') %>
-<%- body %>
-<%- partial('_partial/footer') %>
+    <%- partial('_partial/header') %>
+    <%- body %>
+    <%- partial('_partial/footer') %>
 
-<%- partial('_partial/search') %>
-<%- partial('_partial/back-top') %>
+    <%- partial('_partial/search') %>
+    <%- partial('_partial/back-top') %>
 
-<script src="<%- theme.libs.js.materialize %>"></script>
-<script src="<%- theme.libs.js.masonry %>"></script>
-<script src="<%- theme.libs.js.aos %>"></script>
-<script src="<%- theme.libs.js.scrollProgress %>"></script>
-<script src="<%- theme.libs.js.lightgallery %>"></script>
-<script src="/js/matery.js"></script>
+    <script src="<%- theme.libs.js.materialize %>"></script>
+    <script src="<%- theme.libs.js.masonry %>"></script>
+    <script src="<%- theme.libs.js.aos %>"></script>
+    <script src="<%- theme.libs.js.scrollProgress %>"></script>
+    <script src="<%- theme.libs.js.lightgallery %>"></script>
+    <script src="/js/matery.js"></script>
 
-<%- partial('_partial/google-analytics') %>
-<% if (theme.clicklove.enable) { %>
+    <%- partial('_partial/google-analytics') %>
+    <% if (theme.clicklove.enable) { %>
     <script src="<%- theme.libs.js.clicklove %>"></script>
-<% } %>
-<% if (theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
+    <% } %>
+    <% if (theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
     <script async src="<%- theme.libs.js.busuanzi %>"></script>
-<% } %>
+    <% } %>
+
+    <% if (theme.tidio.enable) { %>
+    <script src="//code.tidio.co/<%- theme.tidio.public_key %>.js"></script>
+    <script>
+        $(document).ready(function () {
+            setInterval(change_Tidio, 50);
+
+            function change_Tidio() {
+                var tidio = $("#tidio-chat iframe");
+                if (tidio.css("display") == "block" && tidio.css("bottom") == "0px" && $(window).width() >
+                    690 || parseInt(tidio.css("height")) < 230) {
+                    document.getElementById("tidio-chat-iframe").style.bottom = ($("div.toc-title").length && $(
+                        window).width() > 690) > 0 ? "100px" : "<%- theme.tidio.bottom %>"; //更改bottom为100px 自定义
+                    document.getElementById("tidio-chat-iframe").style.height = parseInt(tidio.css("height")) >=
+                        520 ? "520px" : tidio.css("height");
+                    document.getElementById("tidio-chat-iframe").style.right = "<%- theme.tidio.right %>";
+                    document.getElementById("tidio-chat-iframe").style.zIndex = "997";
+                }
+                if (tidio.css("display") == "block" && parseInt(tidio.css("height")) >= 230) {
+                    document.getElementById("tidio-chat-iframe").style.zIndex = "998";
+                    document.getElementById("tidio-chat-iframe").style.right = "0px";
+                }
+            }
+        });
+    </script>
+    <% } %>
+
+    <% if (theme.daovoice.enable) { %>
+        <script>
+        (function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/6984b559.js","daovoice")
+        daovoice('init', {
+            app_id: "<%- theme.daovoice.app_id %>"
+        });
+        daovoice('update');
+        </script>
+    <% } %>
 
 </body>
+
 </html>
