优化页脚显示项目

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="page-footer bg-color">
     <div class="container row center-align">
         <div class="col s12 m8 l8 copy-right">
-            本站由&nbsp;&copy;<a href="https://blinkfox.github.io/" target="_blank">Blinkfox</a>&nbsp;基于
+            本站由&nbsp;&copy;<a href="<%- config.url %>" target="_blank"><%- config.author %></a>&nbsp;基于
             <a href="https://hexo.io/" target="_blank">Hexo</a>&nbsp;的
             <a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">Matery</a>&nbsp;主题搭建
             <br>
