--- a/layout/friends.ejs
+++ b/layout/friends.ejs
@@ -5,6 +5,13 @@
         margin-bottom: 30px;
     }
 
+    .friends-container .tag-title {
+        margin-bottom: 10px;
+        color: #3C4858;
+        font-size: 1.75rem;
+        font-weight: 400;
+    }
+
     .frind-ship img {
         border-radius: 50%;
     }
@@ -176,44 +183,48 @@
 </style>
 
 <main class="content">
-    <div class="container chip-container">
+    <div class="container friends-container">
         <div class="card">
             <div class="card-content">
                 <div class="tag-title center-align">
                     <i class="fa fa-address-book"></i>&nbsp;&nbsp;<%= __('friends') %>
                 </div>
-                <%- page.content %>
             </div>
-        </div>
-        <article id="friends-link">
-            <% if (site.data && site.data.friends) { %>
-            <% var friends = site.data.friends; %>
-            <div class="row tags-posts friend-all">
-                <% for (var i = 0, len = friends.length; i < len; i++) { %>
-                <% var friend = friends[i]; %>
-                <div class="col s12 m6 l4 friend-div" data-aos="zoom-in-up">
-                    <div class="card frind-card<%- ((i % 10) +1) %>">
-                        <div class="frind-ship">
-                            <div class="title">
-                                <img src="<%- friend.avatar %>" alt="img">
-                                <div>
-                                    <h1 class="friend-name"><%- friend.name %></h1>
-                                    <p><%- friend.introduction %></p>
+            <article id="friends-link">
+                <% if (site.data && site.data.friends) { %>
+                <% var friends = site.data.friends; %>
+                <div class="row tags-posts friend-all">
+                    <% for (var i = 0, len = friends.length; i < len; i++) { %>
+                    <% var friend = friends[i]; %>
+                    <div class="col s12 m6 l4 friend-div" data-aos="zoom-in-up">
+                        <div class="card frind-card<%- ((i % 10) +1) %>">
+                            <div class="frind-ship">
+                                <div class="title">
+                                    <img src="<%- friend.avatar %>" alt="img">
+                                    <div>
+                                        <h1 class="friend-name"><%- friend.name %></h1>
+                                        <p><%- friend.introduction %></p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="friend-button">
-                                <a href="<%- friend.url %>" target="_blank" 
-                                    class="button button-glow button-rounded button-caution">
-                                    <%- friend.title %>
-                                </a>
+                                <div class="friend-button">
+                                    <a href="<%- friend.url %>" target="_blank"
+                                        class="button button-glow button-rounded button-caution">
+                                        <%- friend.title %>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <% } %>
                 </div>
                 <% } %>
+            </article>
+        </div>
+        <div class="card">
+            <div class="card-content">
+                <%- page.content %>
             </div>
-            <% } %>
-        </article>
+        </div>
         <div class="card">
 
             <% if (theme.gitalk && theme.gitalk.enable) { %>
@@ -241,9 +252,9 @@
 </main>
 
 <script>
-$(function () {
-    $('#friends-link').masonry({
-        itemSelector: '.friend-div'
+    $(function () {
+        $('#friends-link').masonry({
+            itemSelector: '.friend-div'
+        });
     });
-});
 </script>
