--- a/layout/_partial/valine.ejs
+++ b/layout/_partial/valine.ejs
@@ -7,11 +7,9 @@
         padding: 20px 20px 5px 20px;
     }
 
-    #vcomments input[type=text],
-    #vcomments input[type=email],
-    #vcomments input[type=url],
     #vcomments textarea {
         box-sizing: border-box;
+        background: url("<%- theme.valine.background %>") 100% 100% no-repeat;
     }
 
     #vcomments p {
