--- a/来源/CSS/matery.css
+++ b/来源/CSS/matery.css
@@ -1791,3 +1791,96 @@ footer .copy-right {
     /* bg color = bg color under block */
     background: white;
 }
+
+
+/*二级菜单*/
+
+.nav-menu {}
+.nav-menu li .sub-nav{
+     position:absolute;top:77px;
+	 list-style:none;margin-left: -20px;
+	 display:none;
+}
+.nav-menu li .sub-nav li{
+       text-align:center;
+	   clear:left;
+	   width:140px;
+	   height:35px;
+	   line-height:35px;
+	   position:relative;
+ }
+.nav-menu li .sub-nav li a{
+         height:34px;
+		 line-height:34px;
+		 width:138px;
+		 padding: 0px;
+		 display:inline-block;
+		 border-radius: 5px;
+		 color: #000;
+}
+.nav-show i[aria-hidden=true]{
+    -webkit-transform: rotate(180deg)!important;
+    -moz-transform: rotate(180deg)!important;
+    -o-transform: rotate(180deg)!important;
+    -ms-transform: rotate(180deg)!important;
+    transform: rotate(180deg)!important;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -o-transition: all .3s;
+    -ms-transition: all .3s;
+    transition: all .3s;
+}
+.menus_item_child {
+    background-color: rgba(255,255,255,.8);
+    width: fit-content;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 5px 20px -4px rgba(0,0,0,.5);
+    box-shadow: 0 5px 20px -4px rgba(0,0,0,.5);
+    display: none;
+    opacity: 0.98;
+    -ms-filter: none;
+    filter: none;
+    -webkit-animation: sub_menus .3s .1s ease both;
+    -moz-animation: sub_menus .3s .1s ease both;
+    -o-animation: sub_menus .3s .1s ease both;
+    -ms-animation: sub_menus .3s .1s ease both;
+    animation: sub_menus .3s .1s ease both;
+}
+.menus_item_child:before{
+     content:"";
+     position:absolute;
+	 top:-20px;left:50%;
+	 margin-left:-10px;
+	 border-width:10px;
+	 border-style:solid;
+	 border-color:transparent transparent rgba(255,255,255,.8)
+}
+.m-nav-item{position: relative;left: 45px}
+.m-nav-item ul{display: none;background: rgba(255,255,255,.1);}
+.m-nav-item ul li{	
+ width:245px;
+ height:50px;
+ line-height: 50px;
+ text-align: center;
+}
+.m-nav-show .m-icon{    
+    -webkit-transform: rotate(90deg)!important;
+    -moz-transform: rotate(90deg)!important;
+    -o-transform: rotate(90deg)!important;
+    -ms-transform: rotate(90deg)!important;
+    transform: rotate(90deg)!important;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -o-transition: all .3s;
+    -ms-transition: all .3s;
+    transition: all .3s;
+}
+.m-nav-show,.m-nav-item>a:hover{color: #FFF;background:rgba(255,255,255,.8);}
+.m-nav-show>a:before,.m-nav-item>a:hover:before{opacity:1;}
+.m-nav-item .m-icon{
+	 position:absolute; 
+	 right:65px;
+	 height:50px;
+	 padding:0px;
+	 margin:0px;
+}
