删除canvas-nest的异步加载，不然颜色无法生效

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -79,7 +79,7 @@
     <script type="text/javascript" color="<%- theme.canvas_nest.color %>"
         pointColor="<%- theme.canvas_nest.pointColor %>" opacity='<%- theme.canvas_nest.opacity %>'
         zIndex="<%- theme.canvas_nest.zIndex %>" count="<%- theme.canvas_nest.count %>"
-        src="<%- theme.libs.js.canvas_nest %>" async="async"></script>
+        src="<%- theme.libs.js.canvas_nest %>"></script>
     <% } %>
 
     <% if (theme.ribbon.enable) { %>
