顶部菜单栏现在可以更宽的铺开，浏览器窗口自适应

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -20,6 +20,12 @@
         max-width: 1125px;
     }
 
+    .head-container {
+    	position: absolute;
+        padding: 0px 30px;
+        width: 100%;
+    }
+	
     .post-container {
         width: 90%;
         margin: 0 auto;
