现在可以关闭rss

--- a/layout/_partial/social-link.ejs
+++ b/layout/_partial/social-link.ejs
@@ -40,7 +40,7 @@
     </a>
 <% } %>
 
-<% if (config.feed && config.feed.path == 'atom.xml') { %>
+<% if (theme.socialLink.rss.enable) { %>
     <a href="<%- url_for('/atom.xml') %>" class="tooltipped" target="_blank" data-tooltip="RSS 订阅" data-position="top" data-delay="50">
         <i class="fa fa-rss"></i>
     </a>
