--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -46,13 +46,14 @@
 			<%- (config.language === 'zh-CN' && menuMap.has(key)) ? menuMap.get(key) : key %>
 			<span class="m-icon"><i class="fa fa-chevron-right"></i></span>
 		</a>
-            <ul>
+            <ul <%if(theme.navMenu&&theme.navMenu.bgColor){%> style="background: <%-theme.navMenu.bgColor%>;"<%}%> >
               <% for(let childrenLink of theme.menu[key].children){ %>
-                <li> 
-                  <a href="<%- url_for(childrenLink.url)%>" >
-		        <% if (childrenLink.icon && childrenLink.icon.length > 0) { %>
-				<i class="fa <%- childrenLink.icon %>" style="left: 18px; position: absolute;"></i>
-			<% } %>
+                <li>   
+				
+                  <a href="<%- url_for(childrenLink.url)%> " style="margin-left:<%if(theme.navMenu&&theme.navMenu.mleft){%>50px<%}else{%>75px<%}%>";>
+				  <% if (childrenLink.icon && childrenLink.icon.length > 0) { %>
+				   <i class="fa <%- childrenLink.icon %>" style="position: absolute;left:<%if(theme.navMenu&&theme.navMenu.mleft){%>28px<%}else{%>50px<%}%>" ></i>
+			      <% } %>
 		          <span><%- childrenLink.name %></span>
                   </a>
                 </li>
