--- a/layout/_partial/index-cover.ejs
+++ b/layout/_partial/index-cover.ejs
@@ -120,7 +120,7 @@ var coverPostsCount = coverPosts.length;
     %>
     <div class="carousel-item amber white-text carousel-post bg-cover"
             style="background-image: url('<%- coverImg %>');">
-        <div class="container">
+        <div class="container" style="right: 0px;left: 0px;">
             <div class="row">
                 <div class="col s10 offset-s1">
                     <div class="title center-align"><%- post.title %></div>
