--- a/layout/_partial/prev-next.ejs
+++ b/layout/_partial/prev-next.ejs
@@ -54,7 +54,7 @@ var featureImages = theme.featureImages;
                             <% if (page.prev.categories && page.prev.categories.length > 0) { %>
                             <i class="fa fa-bookmark fa-fw icon-category"></i>
                             <% page.prev.categories.forEach(category => { %>
-                            <a href="<%- url_for(category.path) %>" class="post-category" target="_blank">
+                            <a href="<%- url_for(category.path) %>" class="post-category">
                                     <%- category.name %>
                                 </a>
                             <% }); %>
@@ -71,7 +71,7 @@ var featureImages = theme.featureImages;
                 <% if(page.prev.tags && page.prev.tags.length > 0) { %>
                 <div class="card-action article-tags">
                     <% page.prev.tags.forEach(tag => { %>
-                    <a href="<%- url_for(tag.path) %>" target="_blank">
+                    <a href="<%- url_for(tag.path) %>">
                         <span class="chip bg-color"><%= tag.name %></span>
                     </a>
                     <% }); %>
@@ -116,7 +116,7 @@ var featureImages = theme.featureImages;
                             <% if (page.categories && page.categories.length > 0) { %>
                             <i class="fa fa-bookmark fa-fw icon-category"></i>
                             <% page.categories.forEach(category => { %>
-                            <a href="<%- url_for(category.path) %>" class="post-category" target="_blank">
+                            <a href="<%- url_for(category.path) %>" class="post-category">
                                     <%- category.name %>
                                 </a>
                             <% }); %>
@@ -134,7 +134,7 @@ var featureImages = theme.featureImages;
                 <% if(page.tags && page.tags.length > 0) { %>
                 <div class="card-action article-tags">
                     <% page.tags.forEach(tag => { %>
-                    <a href="<%- url_for(tag.path) %>" target="_blank">
+                    <a href="<%- url_for(tag.path) %>">
                         <span class="chip bg-color"><%= tag.name %></span>
                     </a>
                     <% }); %>
@@ -180,7 +180,7 @@ var featureImages = theme.featureImages;
                             <% if (page.next.categories && page.next.categories.length > 0) { %>
                             <i class="fa fa-bookmark fa-fw icon-category"></i>
                             <% page.next.categories.forEach(category => { %>
-                            <a href="<%- url_for(category.path) %>" class="post-category" target="_blank">
+                            <a href="<%- url_for(category.path) %>" class="post-category">
                                     <%- category.name %>
                                 </a>
                             <% }); %>
@@ -197,7 +197,7 @@ var featureImages = theme.featureImages;
                 <% if(page.next.tags && page.next.tags.length > 0) { %>
                 <div class="card-action article-tags">
                     <% page.next.tags.forEach(tag => { %>
-                    <a href="<%- url_for(tag.path) %>" target="_blank">
+                    <a href="<%- url_for(tag.path) %>">
                         <span class="chip bg-color"><%= tag.name %></span>
                     </a>
                     <% }); %>
@@ -242,7 +242,7 @@ var featureImages = theme.featureImages;
                             <% if (page.categories && page.categories.length > 0) { %>
                             <i class="fa fa-bookmark fa-fw icon-category"></i>
                             <% page.categories.forEach(category => { %>
-                            <a href="<%- url_for(category.path) %>" class="post-category" target="_blank">
+                            <a href="<%- url_for(category.path) %>" class="post-category">
                                     <%- category.name %>
                                 </a>
                             <% }); %>
@@ -260,7 +260,7 @@ var featureImages = theme.featureImages;
                 <% if(page.tags && page.tags.length > 0) { %>
                 <div class="card-action article-tags">
                     <% page.tags.forEach(tag => { %>
-                    <a href="<%- url_for(tag.path) %>" target="_blank">
+                    <a href="<%- url_for(tag.path) %>">
                         <span class="chip bg-color"><%= tag.name %></span>
                     </a>
                     <% }); %>
