--- a/layout/_widget/recommend.ejs
+++ b/layout/_widget/recommend.ejs
@@ -53,10 +53,10 @@
             <div class="post-body">
                 <div class="post-categories">
                     <% post.categories.forEach(category => { %>
-                    <a href="<%- url_for(category.path) %>" class="category" target="_blank"><%- category.name %></a>
+                    <a href="<%- url_for(category.path) %>" class="category"><%- category.name %></a>
                     <% }); %>
                 </div>
-                <a href="<%- url_for(post.path) %>" target="_blank">
+                <a href="<%- url_for(post.path) %>">
                     <h3 class="post-title"><%- post.title %></h3>
                 </a>
                 <p class="post-description">
@@ -66,8 +66,7 @@
                         <%- strip_html(post.content).substring(0, 70) %>
                     <% } %>
                 </p>
-                <a href="<%- url_for(post.path) %>" target="_blank"
-                        class="read-more btn waves-effect waves-light" style="background: <%- bgColor %>">
+                <a href="<%- url_for(post.path) %>" class="read-more btn waves-effect waves-light" style="background: <%- bgColor %>">
                     <i class="icon fa fa-eye fa-fw"></i><%- __('readMore') %>
                 </a>
             </div>
@@ -92,15 +91,14 @@
             <div class="post-body">
                 <div class="post-categories">
                     <% post.categories.forEach(category => { %>
-                    <a href="<%- url_for(category.path) %>" class="category" target="_blank"><%- category.name %></a>
+                    <a href="<%- url_for(category.path) %>" class="category"><%- category.name %></a>
                     <% }); %>
                 </div>
-                <a href="<%- url_for(post.path) %>" target="_blank">
+                <a href="<%- url_for(post.path) %>">
                     <h3 class="post-title"><%- post.title %></h3>
                 </a>
                 <p class="post-description"><%- description %></p>
-                <a href="<%- url_for(post.path) %>" target="_blank"
-                        class="read-more btn waves-effect waves-light" style="background: <%- bgColor %>">
+                <a href="<%- url_for(post.path) %>" class="read-more btn waves-effect waves-light" style="background: <%- bgColor %>">
                     <i class="icon fa fa-eye fa-fw"></i><%- __('readMore') %>
                 </a>
             </div>
