--- a/layout/category.ejs
+++ b/layout/category.ejs
@@ -73,7 +73,7 @@
                     <% if (post.tags && post.tags.length) { %>
                     <div class="card-action article-tags">
                         <% post.tags.forEach(tag => { %>
-                        <a href="<%- url_for(tag.path) %>" target="_blank">
+                        <a href="<%- url_for(tag.path) %>">
                             <span class="chip bg-color"><%= tag.name %></span>
                         </a>
                         <% }); %>
