--- a/layout/tag.ejs
+++ b/layout/tag.ejs
@@ -57,7 +57,7 @@
                                 <% if (post.categories && post.categories.length > 0) { %>
                                 <i class="fa fa-bookmark fa-fw icon-category"></i>
                                 <% post.categories.forEach(category => { %>
-                                <a href="<%- url_for(category.path) %>" class="post-category" target="_blank">
+                                <a href="<%- url_for(category.path) %>" class="post-category">
                                 <%- category.name %>
                                 </a>
                                 <% }); %>
