--- a/layout/friends.ejs
+++ b/layout/friends.ejs
@@ -180,6 +180,10 @@
     .frind-card10 {
         background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
     }
+    
+    article .card {
+        overflow: visible !important;
+    }
 </style>
 
 <main class="content">
